--- a/Unit Converter/styles.css
+++ b/Unit Converter/styles.css
@@ -4,15 +4,16 @@
   overflow: hidden;
   background-color: #333;
   display: flex;
-  justify-content:space-around;
+    justify-content:space-around;  
+    /* justify-content: flex-end; */
 }
 
 .unit{
     display: flex;
-    align-items: center;
+    align-items: center; 
 }
 .navbar a {
-  float: left;
+   float: left; 
   display: block;
   color: white;
   text-align: center;
