--- a/Unit Converter/styles.css
+++ b/Unit Converter/styles.css
@@ -1,27 +1,73 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.navbar {
-    color: white;
-  overflow: hidden;
-  background-color: #333;
+nav{
+  background-color: white;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+nav ul{
+  width: 100%;
+  list-style: none;
   display: flex;
-  justify-content:space-around;
+  justify-content: flex-end;
+  align-items: center;
 }
-
-.unit{
-    display: flex;
-    align-items: center;
+nav li{
+  height: 50px;
 }
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
+nav a{
+  height: 100%;
+  padding: 0 30px;
   text-decoration: none;
-}
-
-
-.navbar a:hover {
-  background-color: #ddd;
+  display: flex;
+  align-items: center;
   color: black;
 }
+nav a:hover{
+  background-color: #f0f0f0;
+}
+nav li:first-child{
+  margin-right: auto;
+}
+.sidebar{
+  position: fixed;
+  top: 0; 
+  right: 0;
+  height: 100vh;
+  width: 250px;
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(12px);
+  box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.sidebar li{
+  width: 100%;
+}
+.sidebar a{
+  width: 100%;
+}
+.menu-button{
+  display: none;
+}
+@media(max-width: 800px){
+  .hideOnMobile{
+    display: none;
+  }
+  .menu-button{
+    display: block;
+  }
+}
+@media(max-width: 400px){
+  .sidebar{
+    width: 100%;
+  }
+}
+
+
