--- a/Unit Converter/styles.css
+++ b/Unit Converter/styles.css
@@ -4,8 +4,8 @@
   overflow: hidden;
   background-color: #333;
   display: flex;
-    justify-content:space-around;  
-    /* justify-content: flex-end; */
+    justify-content:space-evenly;   
+    
 }
 
 .unit{
