--- a/Unit Converter/styles.css
+++ b/Unit Converter/styles.css
@@ -1,55 +1,47 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-@import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Style+Script&display=swap');
-
 * {
   padding: 0;
   margin: 0;
 }
 
+body{
+  scroll-behavior: smooth;
+}
+
 .navbar {
   color: black;
-  overflow: hidden;
   background-color: #E5DBCC;
   display: flex;
   justify-content: space-between;
   height: 64px;
-  font-family: "Poppins";
-}
-
-.unit {
-  display: flex;
-  align-items: center;
-  font-size: 2.5rem;
-  margin-left: 10vw;
-  font-family: "Style Script";
-}
-
-.navbar {
   display: flex;
   justify-items: center;
   align-items: center;
 }
 
-.navbar a {
-  float: left;
-  display: block;
+.unit {
+  font-size: 2.5rem;
+  margin-left: 10vw;
+}
+
+.link {
   color: black;
-  text-align: center;
-  padding: 20px 15px;
+  padding: 25px 15px;
   text-decoration: none;
 }
 
 .navbar a:hover {
   background-color: gray;
-  left: 0;
   transition: all 0.5s ease-in-out;
 }
 
-.fa-moon {
+/* .fa-moon {
   margin-right: 3vw;
+  cursor: pointer;
+} */
+
+span .fa-bars {
+  display: none;
+  margin-right: 10px;
   cursor: pointer;
 }
 
@@ -64,48 +56,37 @@
 }
 
 #online {
-  width: 30vw;
   text-align: center;
   color: #F4F2F3;
-  font-family: "Bad Script";
-  line-height: 1.1;
+  line-height: 0.8;
 }
 
 .msg {
-  font-family: "Bad Script";
   line-height: 1.1;
   color: #F4F2F3;
 }
 
-/* .info {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.info i {
-  color: #5f575e;
-} */
-
-
 .container {
   height: 40vh;
-  width: 80vw;
-  border: 2px solid black;
+  width: 85vw;
   border-radius: 5px;
-  display: flex;
+  display: flex;               
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   background-color: #5f575e;
   border: none;
 }
 
-.container .inside {
+.inside {
   background-color: #F4F2F3;
-  height: 37vh;
-  width: 15vw;
+  height: 37vmin;
+  width: 16vmax;
   border-radius: 5px;
   position: relative;
+}
+
+.inside h3 {
+  padding-top: 6px;
 }
 
 #length {
@@ -124,11 +105,6 @@
 
 .converterInfo {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
   color: black;
   font-weight: 900;
   z-index: 5;
@@ -138,17 +114,15 @@
   text-align: center;
 }
 
+.converterInfo p {
+  position: absolute;
+  top: 45px;
+
+}
+
 .converterInfo h3 a {
   text-decoration: none;
   border-bottom: 3px solid #867285;
-}
-
-.btn {
-  /* position: fixed;
-  bottom: 35vh;
-  left: auto;
-  right: auto; */
-  cursor: pointer;
 }
 
 #weight {
@@ -190,11 +164,6 @@
   font-weight: 700;
 }
 
-#javaScript {
-  font-family: "Style Script";
-  font-size: 1.3rem;
-}
-
 footer {
   background-color: #ffffff;
   height: calc(35vh - 128px);
@@ -213,4 +182,193 @@ footer p {
   left: 50%;
   transform: translate(-50%);
   text-align: center;
+}
+
+/* Media Query  */
+
+@media only screen and (max-width: 1180px){
+  .container {
+    width: 90vw;
+  }
+
+  .inside {
+    width: 17vw;
+  }
+
+  footer p {
+    font-size: 0.94rem;
+  }
+}
+
+@media only screen and (max-width: 1110px){
+  .main-content{
+    height: auto;
+    padding: 30px 0;
+  }
+
+  .container {
+    height: 80vmin;
+    width: 80vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    
+  }
+
+  .inside {
+    width: 25vw;
+  }
+
+  footer {
+    height: calc(35vmin - 128px);
+  }
+}
+
+@media only screen and (max-width: 860px){
+  .container {
+    height: auto;
+    width: 75vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 20px 0;
+    gap: 20px;
+    place-items: center;
+  }
+
+  .inside {
+    width: 70vw;
+    height: 22vh;
+  }
+
+  #length {
+    background-size: 30%;
+  }
+  #weight {
+    background-size: 30%;
+  }
+  #volume {
+    background-size: 30%;
+  }
+  #temp {
+    background-size: 30%;
+  }
+  #currency {
+    background-size: 30%;
+  }
+
+  footer {
+    height: calc(35vh - 128px);
+  }
+
+  footer p {
+    font-size: 0.9em;
+  }
+}
+
+@media only screen and (max-width: 615px){
+  .container {
+    width: 85vw;
+  }
+
+  .inside {
+    width: 80vw;
+  }
+
+  .preFooter {
+    gap: 50px;
+  }
+}
+
+@media only screen and (max-width: 455px){
+  .unit {
+    font-size: 30px;
+  }
+
+  .fa-2x {
+    font-size: 1.5em;
+  }
+
+  #online, .msg {
+    font-size: 0.8rem;
+  }
+
+  .inside {
+    height: 24vh;
+  }
+
+  .preFooter {
+    gap: 30px;
+  }
+}
+
+@media only screen and (max-width: 385px){
+  .inside {
+    height: 29vh;
+  }
+
+  footer p {
+    font-size: 0.7em;
+  }
+}
+
+@media only screen and (max-width: 355px){
+  #online, .msg {
+    font-size: 0.7rem;
+  }
+
+  footer p {
+    font-size: 0.6em;
+  }
+}
+
+@media only screen and (max-width: 315px){
+  .inside {
+    height: 32vh;
+  }
+
+  #online, .msg {
+    font-size: 0.6rem;
+  }
+
+  .preFooter {
+    gap: 20px;
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 280px) {
+  .inside {
+    height: 40vh;
+  }
+}
+
+/* Media Query on NavBar */
+
+@media only screen and (max-width: 980px) {
+  .unit {
+    margin-left: 5vw;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .link {
+    display: none;
+  }
+
+  .fontawesome {
+    position: relative;
+  }
+
+  .fa-moon {
+    position: absolute;
+    right: 60px;
+  }
+
+  span .fa-bars {
+    display: inline-block;
+  }
+
+  .fa-2x {
+    font-size: 2em;
+  }
 }
